--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,7 +40,8 @@ code {
 }
 
 @keyframes arrowAnimation {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0);
   }
   50% {
@@ -48,10 +49,33 @@ code {
   }
 }
 @keyframes arrowAnimation2 {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateX(0);
   }
   50% {
     transform: translateX(-5px); /* Adjust the distance to move */
   }
+}
+
+:root {
+  --error: #e7195a;
+  --msg: #4bffba;
+}
+div.error {
+  padding: 10px;
+  background: #ffefef;
+  border: 1px solid var(--error);
+  color: var(--error);
+  border-radius: 4px;
+  margin: 20px 0;
+}
+
+div.msg {
+  padding: 10px;
+  background: #d9ffec;
+  border: 1px solid var(--msg);
+  color: var(--msg);
+  border-radius: 4px;
+  margin: 20px 0;
 }
