--- a/frontend/src/forms/forms.css
+++ b/frontend/src/forms/forms.css
@@ -248,3 +248,28 @@ button.mb-3.btn-secondary.btn-interest-selected.btn.btn-primary {
   width: 100%;
   margin-top: 15px;
 }
+
+.signup {
+  width: 15.125rem;
+  height: 2.1875rem;
+  flex-shrink: 0;
+  color: var(--Secondary, #ff6b35);
+  font-family: Roboto;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 0rem;
+  padding-bottom: 3rem;
+  padding-right: 0px;
+  padding-left: 60px;
+}
+
+.signup-container {
+  padding-top: 1.0rem;
+  padding-left: 0;
+  padding-right: 0;
+  display: flex;
+  align-items: end;
+  justify-content: flex-end;
+  margin-right: -8px;
+}
