--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,3 +79,33 @@ div.msg {
   border-radius: 4px;
   margin: 20px 0;
 }
+
+.modal-title.h4 {
+  font-weight: 600;
+}
+.custom-dropdown-toggle {
+  background-color: white !important;
+  border-color: #ced4da !important;
+  color: black !important;
+  width: 100% !important;
+  text-align: left !important;
+  /* Additional styles to remove hover effects */
+  &:hover,
+  &:focus {
+    background-color: white !important;
+    color: black !important;
+    border-color: #ced4da !important;
+    box-shadow: none !important;
+  }
+}
+.custom-dropdown-toggle::after {
+  content: "";
+  display: inline-block;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 4px solid black; /* Arrow color */
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
