--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -73,13 +73,12 @@ div.error {
 
 div.msg {
   padding: 10px;
-  background: #d9ffec;
+  background: #effdff;
   border: 1px solid var(--msg);
   color: var(--msg);
   border-radius: 4px;
   margin: 20px 0;
 }
-
 .modal-title.h4 {
   font-weight: 600;
 }
